# swagger.json
@@ -2737,6 +2737,7 @@
     },
     "addCompanyTeamMember": {
       "required": [
+        "rfId",
         "first_name",
         "last_name",
         "role",
@@ -2748,6 +2749,9 @@
         "isBuyer"
       ],
       "properties": {
+        "rfId": {
+          "type": "string"
+        },
         "first_name": {
           "type": "string"
         },
